# NineChronicles.SeasonPass

./: .env.network  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.Consumer  Dockerfile.Tracker  README.md  app.py  block_tracker.service  block_tracker_network.service  docker-compose.yml  pyproject.toml
.github/scripts/: init_block_tracker.sh  upload_host.py
.github/workflows/: build_docker.yml  deploy.yml  main.yml  slack_message.yml  synth.yml  test.yml
apps/: pyproject.toml
apps/api/: api_cdk_stack.py  app.py  dependencies.py  main.py  pyproject.toml
apps/api/api/: user.py
apps/api/app/: celery.py  config.py  dependencies.py  exceptions.py  utils.py
apps/api/app/api/: __init__.py  admin.py  season_pass.py  tmp.py  user.py
apps/api/app/schemas/: admin.py  season_pass.py  tmp.py  user.py
apps/api/settings/: test.py
apps/api/tests/: conftest.py  test.env  test_admin.py  test_season_pass.py
apps/consumer/: app.py  pyproject.toml  world_clear_consumer.py
apps/consumer/app/: config.py
apps/consumer/app/consumers/: adventure_boss_consumer.py  claim_consumer.py  courage_consumer.py  world_clear_consumer.py
apps/consumer/app/utils/: season_pass.py  stake.py
apps/shared/: README.md  pyproject.toml
apps/shared/shared/: constants.py  enums.py
apps/shared/shared/models/: __init__.py  action.py  arena.py  season_pass.py  user.py
apps/shared/shared/schemas/: message.py
apps/shared/shared/utils/: _crypto.py  _graphql.py  actions.py  rmq.py  season_pass.py  transaction.py
apps/shared/tests/: test_gql_client.py
apps/shared/tool/migrations/versions/: 00a050a705c2_add_details_to_action_history.py  040e3c091937_create_base_models.py  08e20d0fcb90_block_identifies_by_both_planet_id_and_.py  135741a7ed0d_add_pass_type_to_block_table.py  1eeafab14cd5_.py  508b09040fa7_control_season_with_datetime.py  665aa93461c4_add_pass_type_to_related_tables.py  77e337ab3c79_add_unique_constraint_to_user_season_.py  825471e94b6f_add_event_action_type.py  8b92be10e129_models_for_multi_pass.py  8f846cbfffec_block_identifies_by_both_planet_id_and_.py  92c0120a4566_update_unique_constraint_of_claim_table.py  97762c954f58_create_claim_model.py  993ab160a6fc_add_instant_reward_column_to_season.py  9a4dafd6163e_add_exp_model.py  a3c500f38dc2_add_rewarded_level_columns.py  a46e378a9cfa_add_adventure_boss_history.py  ac1e86a25be3_add_season_index_column_and_index.py  b0b9cb232f67_add_planet_id_columns.py  bca8f726a5ee_adjust_block_table.py  c3c5e9c8ff0f_.py  c8e1e7686fc5_add_battle_history.py  d7d731964ef7_add_missing_constraint_update.py  e1d1d1c1f914_chane_action_type_column_type.py  ef5d7e33cf37_add_premium_plus_column.py  f0229efb5723_add_planet_id_to_block_and_action_.py  f1944309b46c_add_action_handle_history_tables.py
apps/tracker/: README.md  app.py  pyproject.toml  requirements.txt
apps/tracker/app/: celery.py  config.py  constants.py
apps/tracker/app/consumers/: adventure_boss_consumer.py  courage_consumer.py  world_clear_consumer.py
apps/tracker/app/schemas/: action.py  message.py
apps/tracker/app/trackers/: adv_boss_tracker.py  courage_tracker.py  tx_tracker.py  world_clear_tracker.py
apps/tracker/app/utils/: exp.py  gql.py  (+1 more)
apps/worker/: config.py  pyproject.toml
apps/worker/app/: celery_app.py  config.py
apps/worker/tests/: test_burn_asset_task.py  test_tx_id.py
common/: __init__.py  enums.py  shared_cdk_stack.py
common/alembic/: env.py
common/alembic/versions/: 00a050a705c2_add_details_to_action_history.py  040e3c091937_create_base_models.py  08e20d0fcb90_block_identifies_by_both_planet_id_and_.py  135741a7ed0d_add_pass_type_to_block_table.py  1eeafab14cd5_.py  508b09040fa7_control_season_with_datetime.py  665aa93461c4_add_pass_type_to_related_tables.py  672df574caad_add_timezone.py  77e337ab3c79_add_unique_constraint_to_user_season_.py  825471e94b6f_add_event_action_type.py  8b92be10e129_models_for_multi_pass.py  8f846cbfffec_block_identifies_by_both_planet_id_and_.py  92c0120a4566_update_unique_constraint_of_claim_table.py  97762c954f58_create_claim_model.py  993ab160a6fc_add_instant_reward_column_to_season.py  9a4dafd6163e_add_exp_model.py  a3c500f38dc2_add_rewarded_level_columns.py  a46e378a9cfa_add_adventure_boss_history.py  ac1e86a25be3_add_season_index_column_and_index.py  b0b9cb232f67_add_planet_id_columns.py  c3c5e9c8ff0f_.py  c8e1e7686fc5_add_battle_history.py  d7d731964ef7_add_missing_constraint_update.py  e1d1d1c1f914_chane_action_type_column_type.py  ef5d7e33cf37_add_premium_plus_column.py  f0229efb5723_add_planet_id_to_block_and_action_.py  f1944309b46c_add_action_handle_history_tables.py
common/models/: __init__.py  action.py  arena.py  season_pass.py  user.py
common/utils/: _graphql.py  aws.py  season_pass.py
scripts/: claim_prev_season.py  claim_worker.py  end_season.py  fetch_reward.py  google.py  requirements.txt
season_pass/: __init__.py  api_cdk_stack.py  exceptions.py  main.py  utils.py
season_pass/api/: __init__.py  season_pass.py  tmp.py  user.py
season_pass/schemas/: season_pass.py  tmp.py  user.py
season_pass/settings/: __init__.py  local.py.example  test.py
tests/: conftest.py
tests/common/models/: test_user_model.py
tests/common/utils/: test_actions.py  test_graphql.py  test_transaction.py
tests/data/: level.json  reward.json
tests/season_pass/api/: test_season_pass.py  test_user.py
tests/worker/consumers/: test_claim_consumer.py
tests/worker/utils/: test_stake.py
worker/: __init__.py  block_scraper.py  block_tracker.py  brave_handler.py  consts.py  courage_handler.py  courage_tracker.py  manual_signer.py  tx_tracker.py  unloader.py  worker_cdk_stack.py
worker/handler/: adv_boss_handler.py  adventure_boss_handler.py  courage_handler.py  run.py  world_clear_handler.py
worker/schemas/: action.py  sqs.py
worker/tracker/: adv_boss_tracker.py  courage_tracker.py  run.py  world_clear_tracker.py
worker/utils/: _crypto.py  _graphql.py  aws.py  exp.py  gql.py  mq.py  season_pass.py  stake.py
(+14 files in other folders)
