[tool.poetry]
name = "ninechronicles-seasonpass"
version = "0.0.1"
description = "Season pass service of Nine Chronicles"
authors = ["hyeon <hyeon@planetariumhq.com>"]
readme = "README.md"
packages = [{include = "ninechronicles"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
sqlalchemy = "^2.0.22"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
boto3 = "^1.28.65"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
