[tool.poetry]
name = "api"
version = "1.0.0"
description = "API service of Season Pass"
authors = ["Planetarium <engineering@planetariumhq.com>"]
readme = "README.md"
include = ["app/*"]
exclude = [".env.sample", "tests/*"]
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
structlog = "^25.2.0"
requests = "^2.31.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.8.1"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
celery = "^5.4.0"
shared = { path = "../shared" }

[tool.isort]
profile = "black"

[tool.poetry.group.test.dependencies]
pytest = "^7.0,<7.2"
pytest-mock = "^3.6.0,<3.10"
pytest-cov = "^2.10.0,<3.0.0"

[tool.poetry.group.type.dependencies]
mypy = "^0.971"
types-requests = "^2.29.1"
types-PyYAML = "^6.0.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17.0,<3.0.0"
black = "^22.6.0"
isort = "^5.0.6,<6.0.0"
colorama = "^0.4.6"

[tool.poetry.group.tool.dependencies]
alembic = "^1.12.0"
