[tool.poetry]
name = "api"
version = "1.0.0"
description = "API service of Season Pass"
authors = ["Planetarium <engineering@planetariumhq.com>"]
readme = "README.md"
include = ["app/*"]
exclude = [".env.sample", "tests/*"]
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
structlog = "^25.2.0"
requests = "^2.31.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.8.1"
fastapi = "0.103.2"
uvicorn = "^0.27.0"
celery = { extras = ["redis"], version = "^5.4" }
shared = { path = "../shared" }
psycopg2-binary = "^2.9.9"
httpx = "0.25.0"

[tool.isort]
profile = "black"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-env = "^1.1.1"
pytest-mock = "^3.12.0"
pytest-sugar = "^0.9.7"
testing-postgresql = "^1.3.0"

[tool.poetry.group.type.dependencies]
mypy = "^0.971"
types-requests = "^2.29.1"
types-PyYAML = "^6.0.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17.0,<3.0.0"
black = "^22.6.0"
isort = "^5.0.6,<6.0.0"
colorama = "^0.4.6"

[tool.poetry.group.tool.dependencies]
alembic = "^1.12.0"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
env_files = ["tests/test.env"]
